--- a/app/src/main/res/layout/circleadapter_item.xml
+++ b/app/src/main/res/layout/circleadapter_item.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="5dp">
+    android:layout_height="match_parent">
     <RelativeLayout
         android:id="@+id/layout_headline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:orientation="horizontal">
         <ImageView
             android:id="@+id/user_icon"
@@ -23,17 +23,28 @@
             android:layout_marginTop="5dp"
             android:layout_toRightOf="@+id/user_icon"
             android:text="姓名"
-            android:textColor="#72ACE3"
-            android:textSize="15dp"/>
+            android:textColor="#000000"
+            android:textSize="13dp"/>
         <TextView
-            android:id="@+id/data"
+            android:id="@+id/datatitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/user_icon"
             android:layout_marginLeft="21dp"
             android:layout_below="@+id/name"
+            android:text="发布时间:"
+            android:textSize="13dp"
+            android:textColor="#999999"/>
+        <TextView
+            android:id="@+id/data"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/datatitle"
+            android:layout_marginLeft="5dp"
+            android:layout_below="@+id/name"
             android:text="01-11"
-            android:textSize="13dp"/>
+            android:textSize="13dp"
+            android:textColor="#999999"/>
     </RelativeLayout>
 
     <TextView
@@ -41,11 +52,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:layout_marginLeft="60dp"
+        android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_below="@+id/layout_headline"
         android:text="你好"
-        android:textSize="17dp" />
+        android:textSize="17dp"
+        android:textColor="#000000"/>
     <!--<GridView-->
         <!--android:id="@+id/grid"-->
         <!--android:layout_width="match_parent"-->
@@ -53,13 +65,20 @@
         <!--android:layout_marginTop="5dp"-->
         <!--android:layout_below="@+id/text">-->
     <!--</GridView>-->
+    <View
+        android:id="@+id/viewline"
+        android:layout_below="@+id/text"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="10dp"
+        android:background="#e6e6e6" />
 
     <LinearLayout
         android:id="@+id/layout_bottom"
-        android:layout_below="@+id/text"
+        android:layout_below="@+id/viewline"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="5dp"
         android:orientation="horizontal">
         <LinearLayout
             android:id="@+id/layout_pinglun"
@@ -78,6 +97,13 @@
                 android:layout_height="wrap_content"
                 android:text="评论"/>
         </LinearLayout>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:background="#e6e6e6" />
+
         <LinearLayout
             android:id="@+id/layout_praise"
             android:layout_width="0dp"
@@ -97,16 +123,31 @@
                 android:text="赞"/>
         </LinearLayout>
     </LinearLayout>
+    <View
+        android:id="@+id/viewline1"
+        android:layout_below="@+id/layout_bottom"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="5dp"
+        android:background="#e6e6e6" />
     <LinearLayout
         android:id="@+id/pinglun"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/layout_bottom"
+        android:layout_below="@+id/viewline1"
         android:orientation="vertical">
         <com.example.liubo.world_of_movie.BaseView.SearchListView
             android:id="@+id/lv_pinglun"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent"
+            android:divider="@null">
         </com.example.liubo.world_of_movie.BaseView.SearchListView>
     </LinearLayout>
+    <View
+        android:id="@+id/viewline2"
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_marginTop="2dp"
+        android:layout_below="@+id/pinglun"
+        android:background="#e6e6e6" />
 </RelativeLayout>
