--- a/app/src/main/res/layout/update_layout.xml
+++ b/app/src/main/res/layout/update_layout.xml
@@ -27,6 +27,7 @@
             android:id="@+id/newname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"
             android:layout_weight="4"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -46,6 +47,7 @@
             android:id="@+id/newnote"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"
             android:layout_weight="4"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -65,6 +67,7 @@
             android:id="@+id/newrealname"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"
             android:layout_weight="4"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -84,6 +87,7 @@
             android:id="@+id/newbirth"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"
             android:layout_weight="4"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
@@ -103,6 +107,7 @@
             android:id="@+id/newsex"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:theme="@style/MyEditText"
             android:layout_weight="4"
             android:layout_marginRight="15dp"/>
     </LinearLayout>
