--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,7 @@
 
     <color name="loginout">#FF0000</color>
     <color name="white">#FFFFFF</color>
-    <color name="sign_text">#6B8E23</color>
+    <color name="sign_text">#00ACFF</color>
     <color name="black">#ff000000</color>
     <color name="theme_bg_color">#fff8f7f5</color>
 </resources>
