--- a/app/src/main/res/layout/sign_layout.xml
+++ b/app/src/main/res/layout/sign_layout.xml
@@ -7,26 +7,27 @@
 
     <include layout="@layout/topper" />
 
-    <ImageView
-        android:id="@+id/user_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/common_user_icon"
-        />
+    <!--<ImageView-->
+        <!--android:id="@+id/user_icon"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:background="@drawable/common_user_icon"-->
+        <!--/>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="160dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="用户名:"
+            android:textColor="@color/white"
             android:textSize="15sp"/>
         <EditText
             android:id="@+id/signup_userid"
@@ -49,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:text="密码："
             android:textSize="15sp"/>
         <EditText
@@ -73,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:text="姓名："
             android:textSize="15sp"/>
         <EditText
@@ -96,6 +99,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:text="证件："
             android:textSize="15sp"/>
         <EditText
@@ -104,6 +108,7 @@
             android:layout_height="wrap_content"
             android:hint="身份证后六位"
             android:textSize="15sp"
+            android:textColorHint="@color/white"
             android:layout_gravity="center_vertical"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
@@ -114,7 +119,7 @@
         android:id="@+id/signin_btn"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
