--- a/app/src/main/res/layout/forgetpassword_layout.xml
+++ b/app/src/main/res/layout/forgetpassword_layout.xml
@@ -7,26 +7,27 @@
 
     <include layout="@layout/topper" />
 
-    <ImageView
-        android:id="@+id/user_icon"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/common_user_icon"
-        />
+    <!--<ImageView-->
+        <!--android:id="@+id/user_icon"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_gravity="center_horizontal"-->
+        <!--android:layout_marginTop="40dp"-->
+        <!--android:background="@drawable/common_user_icon"-->
+        <!--/>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="160dp"
         android:orientation="horizontal">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="原用户名:"
+            android:textColor="@color/white"
             android:textSize="15sp"/>
         <EditText
             android:id="@+id/alter_userid"
@@ -48,6 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:text="原姓名："
             android:textSize="15sp"/>
         <EditText
@@ -70,6 +72,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:text="新密码："
             android:textSize="15sp"/>
         <EditText
@@ -86,7 +89,7 @@
         android:id="@+id/alterpasswordbtn"
         android:layout_width="250dp"
         android:layout_height="40dp"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="40dp"
         android:layout_gravity="center_horizontal"
         android:layout_marginLeft="15dp"
         android:layout_marginRight="15dp"
