--- a/app/src/main/res/layout/sign_layout.xml
+++ b/app/src/main/res/layout/sign_layout.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
@@ -58,6 +59,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:inputType="textPassword"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
@@ -83,6 +85,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
@@ -109,6 +112,7 @@
             android:hint="身份证后六位"
             android:textSize="15sp"
             android:textColorHint="@color/white"
+            android:textColor="@color/white"
             android:layout_gravity="center_vertical"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
