--- a/app/src/main/res/layout/forgetpassword_layout.xml
+++ b/app/src/main/res/layout/forgetpassword_layout.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
@@ -57,6 +58,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
@@ -80,6 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_marginLeft="15dp"
             android:layout_marginRight="15dp"/>
