--- a/app/src/main/res/layout/login_layout.xml
+++ b/app/src/main/res/layout/login_layout.xml
@@ -35,6 +35,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="4"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="15dp"
@@ -61,6 +62,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="4"
             android:layout_gravity="center_vertical"
+            android:textColor="@color/white"
             android:theme="@style/MyEditText"
             android:inputType="textPassword"
             android:layout_marginLeft="15dp"
