--- a/app/src/main/res/layout/circlepinglunadapter_item.xml
+++ b/app/src/main/res/layout/circlepinglunadapter_item.xml
@@ -9,7 +9,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="25dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:text="姓名"
         android:textColor="#72ACE3"
         android:textSize="13dp"/>
@@ -19,7 +20,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_below="@+id/layout_headline"
         android:text="回复你:"
         android:textSize="13dp" />
@@ -30,7 +32,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginBottom="3dp"
         android:layout_below="@+id/layout_headline"
         android:text="回复内容······"
         android:maxLines="2"
