--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <!-- title主色 -->
     <color name="ssf_main_color">#00ACFF</color>
     <!-- 副色调 -->
-    <color name="ssf_fu_color">#00ACEF</color>
+    <color name="ssf_fu_color">#005083</color>
     <!-- 通用背景页面 -->
     <color name="common_bg">#f3f5f9</color>
     <!-- 主页面FragmentTab文字颜色 -->
