--- a/app/src/main/res/layout/fragment_surround.xml
+++ b/app/src/main/res/layout/fragment_surround.xml
@@ -6,10 +6,10 @@
 
     <include layout="@layout/topper" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/surround_tv1"
-        android:text="附近"/>
+    <com.baidu.mapapi.map.MapView
+        android:id="@+id/bd_map"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </com.baidu.mapapi.map.MapView>
 
 </LinearLayout>
