--- a/app/src/main/res/layout/video_details.xml
+++ b/app/src/main/res/layout/video_details.xml
@@ -4,108 +4,118 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
     <TextView
         android:id="@+id/statusbar_bg_layout"
         android:layout_width="match_parent"
         android:layout_height="20dp"
         android:layout_alignParentTop="true" >
     </TextView>
+    <LinearLayout
+        android:id="@+id/video_layout"
+        android:layout_width="match_parent"
+        android:layout_height="200dp">
+        <cn.jzvd.JZVideoPlayerStandard
+            android:id="@+id/jc_player"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </cn.jzvd.JZVideoPlayerStandard>
+    </LinearLayout>
 
-    <RelativeLayout
+
+    <!--<RelativeLayout
         android:id="@+id/video_rl"
         android:layout_width="match_parent"
         android:layout_height="202dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="@dimen/library_video_video_margin_top"
-        android:background="@android:color/black" >
+        android:background="@android:color/black" >-->
 
-        <com.example.liubo.world_of_movie.video.WylVideoView
-            android:id="@+id/videoview"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true" />
+    <!-- <com.example.liubo.world_of_movie.video.WylVideoView
+         android:id="@+id/videoview"
+         android:layout_width="match_parent"
+         android:layout_height="match_parent"
+         android:layout_centerInParent="true" />
 
-        <ProgressBar
-            android:id="@+id/loading_pb"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_centerInParent="true"
-            android:visibility="gone" />
-    </RelativeLayout>
+     <ProgressBar
+         android:id="@+id/loading_pb"
+         android:layout_width="30dp"
+         android:layout_height="30dp"
+         android:layout_centerInParent="true"
+         android:visibility="gone" />
+ </RelativeLayout>
 
-    <ImageView
-        android:id="@+id/video_image_iv"
-        android:layout_width="match_parent"
-        android:layout_height="202dp"
-        android:layout_alignTop="@id/video_rl"
-        android:scaleType="centerCrop" />
+ <ImageView
+     android:id="@+id/video_image_iv"
+     android:layout_width="match_parent"
+     android:layout_height="202dp"
+     android:layout_alignTop="@id/video_rl"
+     android:scaleType="centerCrop" />
 
-    <com.example.liubo.world_of_movie.video.WylMediaControl
-        android:id="@+id/media_control"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/library_video_controlbar_height"
-        android:layout_alignBottom="@id/video_rl" >
+ &lt;!&ndash;<com.example.liubo.world_of_movie.video.WylMediaControl
+     android:id="@+id/media_control"
+     android:layout_width="match_parent"
+     android:layout_height="@dimen/library_video_controlbar_height"
+     android:layout_alignBottom="@id/video_rl" >&ndash;&gt;
 
-        <RelativeLayout
-            android:id="@+id/video_control_ll"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/shape_video_play_shadow" >
+     <RelativeLayout
+         android:id="@+id/video_control_ll"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:background="@drawable/shape_video_play_shadow" >
 
-            <ImageButton
-                android:id="@+id/mediacontroller_play_pause"
-                android:layout_width="@dimen/library_video_controlbar_height"
-                android:layout_height="@dimen/library_video_controlbar_height"
-                android:layout_alignParentLeft="true"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
-                android:src="@mipmap/library_video_mediacontroller_play" />
+         <ImageButton
+             android:id="@+id/mediacontroller_play_pause"
+             android:layout_width="@dimen/library_video_controlbar_height"
+             android:layout_height="@dimen/library_video_controlbar_height"
+             android:layout_alignParentLeft="true"
+             android:layout_centerVertical="true"
+             android:background="@android:color/transparent"
+             android:src="@mipmap/library_video_mediacontroller_play" />
 
-            <SeekBar
-                android:id="@+id/mediacontroller_seekbar"
-                style="@style/LibraryVideoMediaControllerSeekBar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="10dp"
-                android:layout_toLeftOf="@+id/mediacontroller_time_total"
-                android:layout_toRightOf="@id/mediacontroller_play_pause"
-                android:focusable="true"
-                android:max="1000"
-                android:thumbOffset="0dp" />
+         <SeekBar
+             android:id="@+id/mediacontroller_seekbar"
+             style="@style/LibraryVideoMediaControllerSeekBar"
+             android:layout_width="match_parent"
+             android:layout_height="wrap_content"
+             android:layout_alignParentBottom="true"
+             android:layout_centerVertical="true"
+             android:layout_marginRight="10dp"
+             android:layout_toLeftOf="@+id/mediacontroller_time_total"
+             android:layout_toRightOf="@id/mediacontroller_play_pause"
+             android:focusable="true"
+             android:max="1000"
+             android:thumbOffset="0dp" />
 
-            <TextView
-                android:id="@+id/mediacontroller_time_current"
-                style="@style/MediaController_Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/mediacontroller_play_pause"
-                android:visibility="gone" />
+         <TextView
+             android:id="@+id/mediacontroller_time_current"
+             style="@style/MediaController_Text"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_centerVertical="true"
+             android:layout_marginLeft="5dp"
+             android:layout_toRightOf="@id/mediacontroller_play_pause"
+             android:visibility="gone" />
 
-            <ImageButton
-                android:id="@+id/mediacontroller_half_full_ib"
-                android:layout_width="@dimen/library_video_controlbar_height"
-                android:layout_height="@dimen/library_video_controlbar_height"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:background="@android:color/transparent"
-                android:src="@mipmap/library_video_mediacontroller_to_full" />
+         <ImageButton
+             android:id="@+id/mediacontroller_half_full_ib"
+             android:layout_width="@dimen/library_video_controlbar_height"
+             android:layout_height="@dimen/library_video_controlbar_height"
+             android:layout_alignParentRight="true"
+             android:layout_centerVertical="true"
+             android:background="@android:color/transparent"
+             android:src="@mipmap/library_video_mediacontroller_to_full" />
 
-            <TextView
-                android:id="@+id/mediacontroller_time_total"
-                style="@style/MediaController_Text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toLeftOf="@id/mediacontroller_half_full_ib" />
-        </RelativeLayout>
-    </com.example.liubo.world_of_movie.video.WylMediaControl>
-
-    <ImageView
+         <TextView
+             android:id="@+id/mediacontroller_time_total"
+             style="@style/MediaController_Text"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:layout_centerVertical="true"
+             android:layout_toLeftOf="@id/mediacontroller_half_full_ib" />
+     </RelativeLayout>
+ </com.example.liubo.world_of_movie.video.WylMediaControl>
+-->
+    <!--<ImageView
         android:id="@+id/play_symbol_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -120,10 +130,10 @@
         android:layout_width="match_parent"
         android:layout_height="10dp"
         android:layout_below="@id/video_rl"
-        android:background="@color/theme_bg_color" />
+        android:background="@color/theme_bg_color" />-->
 
     <LinearLayout
-        android:layout_below="@id/divider_tv"
+        android:layout_below="@id/video_layout"
         android:id="@+id/video_info"
         android:orientation="vertical"
         android:layout_width="match_parent"
