--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -5,6 +5,7 @@
     android:orientation="horizontal"
     android:layout_marginTop="10dp"
     android:layout_marginBottom="20dp"
+    android:padding="10dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
@@ -30,6 +31,7 @@
                 android:layout_marginLeft="10dp"
                 android:textSize="20dp"
                 android:maxEms="8"
+                android:textColor="#000000"
                 android:id="@+id/video_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -41,13 +43,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                android:textSize="15dp"
+                android:textColor="#7b7a7a"
+                android:textSize="10dp"
                 android:text="主演："
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="#7b7a7a"
                 android:layout_marginLeft="10dp"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:id="@+id/video_head"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
@@ -59,37 +63,41 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <TextView
-                android:textSize="15dp"
+                android:textColor="#7b7a7a"
+                android:textSize="10dp"
                 android:text="导演："
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
+                android:textColor="#7b7a7a"
                 android:layout_marginLeft="10dp"
-                android:textSize="15dp"
+                android:textSize="10dp"
                 android:id="@+id/video_director"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
         </LinearLayout>
 
-       <LinearLayout
-           android:layout_marginLeft="10dp"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content">
-           <TextView
-               android:textSize="15dp"
-               android:text="简介："
-               android:layout_width="wrap_content"
-               android:layout_height="wrap_content" />
-           <TextView
-               android:textSize="15dp"
-               android:id="@+id/video_pro"
-               android:text="福建省雷锋精神健康减肥了的实际发生的借款分类的积分看见了进口量的房价的数据来看疯了就看看"
-               android:maxEms="10"
-               android:singleLine="true"
-               android:ellipsize="end"
-               android:layout_width="match_parent"
-               android:layout_height="match_parent" />
-       </LinearLayout>
+        <LinearLayout
+            android:layout_marginLeft="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+            <TextView
+                android:textColor="#7b7a7a"
+                android:textSize="10dp"
+                android:text="简介："
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:textColor="#7b7a7a"
+                android:textSize="10dp"
+                android:id="@+id/video_pro"
+                android:text="福建省雷锋精神健康减肥了的实际发生的借款分类的积分看见了进口量的房价的数据来看疯了就看看"
+                android:maxEms="10"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </LinearLayout>
 
     </LinearLayout>
 
