--- a/app/src/main/res/layout/fragment_surround.xml
+++ b/app/src/main/res/layout/fragment_surround.xml
@@ -5,11 +5,24 @@
     android:layout_height="match_parent">
 
     <include layout="@layout/topper" />
-
-    <com.baidu.mapapi.map.MapView
-        android:id="@+id/bd_map"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-    </com.baidu.mapapi.map.MapView>
-
+        android:layout_height="200dp">
+        <!--<Button
+            android:id="@+id/btn_location"
+            android:text="定位"
+            android:background="@null"
+            android:layout_alignParentBottom="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />-->
+        <com.baidu.mapapi.map.MapView
+            android:id="@+id/bmapView"
+            android:layout_width="fill_parent"
+            android:layout_height="200dp"
+            android:clickable="true" />
+    </RelativeLayout>
+    <ListView
+        android:id="@+id/lv_location"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
