--- a/app/src/main/res/layout/video_list_item.xml
+++ b/app/src/main/res/layout/video_list_item.xml
@@ -14,7 +14,7 @@
         android:layout_weight="3"
         android:id="@+id/video_img"
         android:layout_width="0dp"
-        android:layout_height="match_parent" />
+        android:layout_height="130dp" />
     <LinearLayout
         android:paddingTop="8dp"
         android:layout_weight="7"
