--- a/app/src/main/res/layout/fragment_surround.xml
+++ b/app/src/main/res/layout/fragment_surround.xml
@@ -22,7 +22,9 @@
             android:clickable="true" />
     </RelativeLayout>
     <ListView
+        android:layout_marginTop="10dp"
         android:id="@+id/lv_location"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent">
+    </ListView>
 </LinearLayout>
