--- a/app/src/main/res/layout/location_list_item.xml
+++ b/app/src/main/res/layout/location_list_item.xml
@@ -7,6 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
   <TextView
+      android:textColor="#000000"
+      android:layout_marginBottom="5dp"
+      android:gravity="center"
     android:textSize="20sp"
     android:id="@+id/tv_location_name"
     android:layout_width="match_parent"
