--- a/app/src/main/res/layout/movieadapter_item.xml
+++ b/app/src/main/res/layout/movieadapter_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+    android:layout_margin="10dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -15,7 +16,7 @@
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/user_icon"
         android:layout_marginLeft="8dp"
@@ -32,7 +33,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
-        android:layout_below="@+id/layout_headline"
+        android:layout_below="@+id/name"
         android:text="评论:"
         android:textSize="13dp" />
     <TextView
@@ -44,7 +45,7 @@
         android:layout_marginRight="10dp"
         android:layout_marginTop="3dp"
         android:layout_marginBottom="3dp"
-        android:layout_below="@+id/layout_headline"
+        android:layout_below="@+id/name"
         android:text="回复内容······"
         android:maxLines="2"
         android:textSize="13dp" />
